@@ -1,3 +1,10 @@
+Wed Oct 30 23:42:50 2002  Nicola Pero  <n.pero@mi.flashnet.it>
+
+	* Source/NSBundle.m ([+_addFrameworkFromClass:]): New code
+	locating linked frameworks magically - no matter where they are on
+	disk - by using objc_get_symbol_path().  If that fails or is not
+	available, fall back on the existing code.  Fixed NSLog() message.
+
 2002-10-30  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSThread.m: Implemented and documented new MacOS-X methods -
